# SRPC

./: .gitignore  GlasgowRPCsystem.docx  INSTALL.txt  LICENSE  Makefile  Makefile.am  README.md  callback.h  configure.ac  conntest.c  crecord.c  crecord.h  echoclient.c  endpoint.h  genmakefile.sh  malloctest.c  manifest  srpc.c  srpcmalloc.h  stable.c  stable.h  tslist.c
src/: Makefile  Makefile.am  callbackclient.c  callbackserver.c  compare.sh  ctable.c  ctable.h  echoclient.c  echoserver.c  endpoint.c  logdefs.h  mthclient.c  sgenclient.c  sinkclient.c  sinktest.c  srpc.c  srpc.h  srpcdefs.h  srpcmalloc.c  srpcmalloc.h  tests.sh  tslist.h
